fix form-group spacing

--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -5,7 +5,7 @@ form {
 }
 
 .form-group {
-	margin-bottom: ($spacer * 2);
+	margin-bottom: $spacer;
 }
 
 .form-inline {
